--- a/Linux后端/后端.MD
+++ b/Linux后端/后端.MD
@@ -6,4 +6,4 @@ Telnet
 账户：root(默认)
 密码：holl0311(默认)
 
-<img src="https://raw.githubusercontent.com/zouguo-eng/Vpod-M1-APP/master/Telnet.png" width="500">
+<img src="https://raw.githubusercontent.com/zouguo-eng/Vpod-M1-APP/master/Linux后端/Telnet.png" width="500">
